<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ImageView android:id="@+id/imageView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/us" android:layout_gravity="center"></ImageView>
<Button
android:layout_width="fill_parent"
android:id="@+id/btn_match_new" android:text="@string/new_match" android:layout_height="wrap_content"/>
<Button
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:id="@+id/btn_match_continue" android:text="@string/match_continue"/>
<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btn_match_store" android:text="@string/match_store"></Button>
<Button android:layout_height="wrap_content" android:id="@+id/btn_settings" android:layout_width="match_parent" android:text="@string/settings"></Button>
<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/exit" android:id="@+id/btn_exit"></Button>
</LinearLayout>
