<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/owner_name"></TextView>
    <EditText android:id="@+id/editText1" android:layout_height="wrap_content" android:layout_width="match_parent">
        <requestFocus></requestFocus>
    </EditText>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_gravity="center|right" android:gravity="right">
        <Button android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:id="@+id/btn_ok" android:text="@string/ok" android:layout_width="100px"></Button>
        <Button android:layout_gravity="right" android:layout_height="wrap_content" android:id="@+id/btn_cancel" android:text="@string/cancel" android:layout_width="100px"></Button>
    </LinearLayout>    
</LinearLayout>
