<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/bezma_logo_3d"
        android:contentDescription="@+id/bezma_logo" android:layout_marginTop="40dp">
    </ImageView>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:stretchColumns="*" android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                android:id="@+id/btn_match_new"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_match"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btn_match_continue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_continue" android:textStyle="bold"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                android:id="@+id/btn_match_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_store" android:visibility="gone">
            </Button>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings" android:textStyle="bold">
            </Button>
            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit" android:textStyle="bold">
            </Button>
        </TableRow>
    </TableLayout>

</LinearLayout>